# c_example_code

./: .gitignore  readme.md
fgets_no_newline/: input.txt  main.c
goto/: goto_ex.c
inotify/: .gitignore  inotify.c
ncurses/: .gitignore  CMakeLists.txt
ncurses/src/: first.c  printw.c  printw2.c
regex/: CMakeLists.txt
regex/src/: main.c
ring_buffer/: .gitignore  CMakeLists.txt  ring_buffer.c
ring_buffer/src/: main.c  ring_buffer.c  ring_buffer.h
struct_unix_domain/: CMakeLists.txt
struct_unix_domain/src/: cli.h  client.c  server.c
template/: CMakeLists.txt
tokenize/: main.c
